# conversation-hass

./: .env.example  .gitignore  API.md  ARCHITECTURE.md  MQTT.md  README.md  THEMES.md  docker-compose.demo.yml  docker-compose.rpi-ghcr.yml  docker-compose.rpi.yml  docker-compose.server-ghcr.yml  docker-compose.server.yml  requirements-test.txt  setup.sh
demo/: demo.env.example  system_prompt.txt
desktop/: Cargo.toml  install.sh
desktop/config/: config.toml  style.css
desktop/src/: main.rs
gateway/: Dockerfile  gateway.py
mobile/: .gitignore  README.md  capacitor.config.ts  package-lock.json  package.json  tsconfig.json
openclaw-skill/: README.md
rpi/: Dockerfile
rpi-autostart/: autostart
server/: Dockerfile  mcp_servers.json  requirements.txt  system_prompt.txt
stt-service/: Dockerfile  app.py  engines.py  requirements.txt
tests/: conftest.py  test_alarm.py  test_audio_manager.py  test_audio_pipeline.py  test_calendar_ha.py  test_cdp_snapshot.py  test_cloud_llm.py  test_cloud_llm_routes.py  test_context_diagnostics.py  test_conversation.py  test_conversation_log.py  test_display_intercept.py  test_gateway.py  test_go2rtc.py  test_ha_ws.py  test_intent_hints.py  test_intercom.py  test_intercom_reframe.py  test_log_images.py  test_mcp_client.py  test_mcp_server.py  test_mdns_advertise.py  test_mqtt_discovery_golden.py  test_mqtt_registry.py  test_mqtt_speak_satellite.py  test_no_cache_middleware.py  test_openclaw_client.py  test_pairing.py  test_photo_frame.py  test_photo_frame_video.py  test_ptt.py  test_push.py  test_qr_code.py  test_satellite.py  (+13 more)
(+196 files in other folders)
