[package]
name = "hal-command"
version = "0.1.0"
edition = "2024"

[dependencies]
gtk4 = "0.9"
gtk4-layer-shell = "0.4"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
async-channel = "2"
toml = "0.8"
dirs = "6"
